# cder

./: .gitignore  .gitmodules  API.md  CHANGELOGS.md  CMakeLists.txt  PROTOCOL.md  README.md  cder_def.sh  dev.sh
changelog/: v1.0.0.md  v1.0.0a.md  v1.0.1.md
clients/bash/: cder.bash.sh
include/: Config.hpp  VERSION.hpp  argparser.hpp  db.hpp  main.hpp  mark.hpp  protocol.hpp  return.hpp
include/PCH/: cli11_pch.hpp  rapidjson_pch.hpp  std_pch.hpp
src/: argparser.cpp  db.cpp  main.cpp  mark.cpp  protocol.cpp
